# poetry-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_folder}}/: README.md
{{cookiecutter.project_name}}/: README.md  pyproject.toml
